# duckdb

./: .gitignore  CMakeLists.txt
examples/embedded-c++/: CMakeLists.txt  main.cpp
examples/standalone-plan/: CMakeLists.txt  main.cpp
extension/: CMakeLists.txt
extension/hdfs/: CMakeLists.txt  hdfs-extension.cpp
extension/hdfs/include/: hdfs-extension.h
src/: CMakeLists.txt
src/catalog/catalog_entry/: duck_table_entry.cpp  index_catalog_entry.cpp
src/common/: debug_util.cpp  exception.cpp  types.cpp  vector.cpp
src/common/row_operations/: row_aggregate.cpp
src/common/sort/: merge_sorter.cpp  sort_state.cpp
src/common/types/: decimal.cpp  value.cpp
src/common/vector_operations/: boolean_operators.cpp
src/execution/: CMakeLists.txt  aggregate_hashtable.cpp  expression_executor.cpp  expression_executor_state.cpp  join_hashtable.cpp  perfect_aggregate_hashtable.cpp  physical_operator.cpp  physical_plan_generator.cpp  radix_partitioned_hashtable.cpp
src/execution/expression_executor/: execute_function.cpp
src/execution/physical_plan/: plan_insert.cpp  plan_limit.cpp  plan_projection.cpp  (+1 more)
src/main/: client_context.cpp  connection.cpp
src/optimizer/: optimizer.cpp  topn_optimizer.cpp
src/parallel/: event.cpp  executor.cpp  pipeline_executor.cpp
src/parser/: parser.cpp
src/planner/: binder.cpp  planner.cpp
src/storage/: buffer_manager.cpp  checkpoint_manager.cpp  data_table.cpp  index.cpp  local_storage.cpp  meta_block_writer.cpp  single_file_block_manager.cpp  storage_manager.cpp
src/transaction/: commit_state.cpp  undo_buffer.cpp
(+119 files in other folders)
